--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Find The Err0r</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="Styles/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="Styles/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/morph/bootstrap.min.css">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <!-- Custom Sass -->
@@ -19,48 +20,50 @@
     <link rel="manifest" href="/site.webmanifest">
 </head>
 
-<body class="container py-4 bg-dark">
-    <header>
+<body class="container">
+    <header class="mt-3">
         <!-- Header Content -->
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark px-4 row w-fit-content m-auto rounded-4">
-            <div class="col-12 d-flex gap-4 justify-content-center">
-                <a href="/" class="icon-btn d-flex align-items-center justify-content-center">
-                    <i class="bi bi-bug-fill fs-2"></i>
+        <nav class="navbar navbar-expand-lg bg-dark px-4 row w-fit-content m-auto rounded-4">
+            <div class="col-12 d-flex gap-4 justify-content-center p-2">
+                <a href="/" class="icon-btn d-flex align-items-center justify-content-center text-decoration-none">
+                    <i class="bi bi-bug-fill fs-2 d-flex align-items-center"></i>
                 </a>
-                <a href="/" class="icon-btn d-flex align-items-center justify-content-center">
-                    <i class="bi bi-bar-chart-fill fs-2"></i>
+                <a href="/" class="icon-btn d-flex align-items-center justify-content-center text-decoration-none">
+                    <i class="bi bi-bar-chart-fill fs-2 d-flex align-items-center"></i>
                 </a>
-                <a href="/" class="icon-btn d-flex align-items-center justify-content-center">
-                    <i class="bi bi-person-circle fs-2"></i>
+                <a href="/" class="icon-btn d-flex align-items-center justify-content-center text-decoration-none">
+                    <i class="bi bi-person-circle fs-2 d-flex align-items-center"></i>
                 </a>
-                <a href="/" class="icon-btn d-flex align-items-center justify-content-center active-custom">
-                    <i class="bi bi-coin fs-2"></i>
+                <a href="/"
+                    class="icon-btn d-flex align-items-center justify-content-center active-custom text-decoration-none">
+                    <i class="bi bi-coin fs-2 d-flex align-items-center"></i>
                 </a>
             </div>
         </nav>
     </header>
 
-    <main>
+    <main class="container p-0">
         <!-- Main Content -->
-        <h1></h1>
-        <div class="row gap-4 store-container mt-5">
-            <div class="col bg-body rounded p-3">Filter</div>
-            <div class="col-6 bg-body rounded p-3">Store</div>
-            <div class="col bg-body rounded p-3">Chat</div>
+        <div class="d-flex gap-2 store-container mt-3">
+            <div class="col-3 bg-dark rounded p-3">Filter</div>
+            <div class="col bg-dark rounded p-3">Store</div>
+            <div class="col-3 bg-dark rounded p-3">Chat</div>
         </div>
     </main>
 
-    <footer class="footer mt-5 py-4 bg-dark text-light border-top border-secondary  m-auto rounded-4">
-        <div class="d-flex flex-column flex-md-row align-items-center justify-content-between gap-3 row">
+    <footer class="footer mt-5 py-4 text-light border-top border-secondary m-auto rounded-4">
+        <div class="d-flex flex-column flex-md-row align-items-center gap-4 ">
             <div class="d-flex align-items-center gap-2 col justify-content-start ">
                 <i class="bi bi-bug-fill fs-4 text-warning"></i>
                 <span class="fw-bold">Find The Err0r</span>
             </div>
-            <div class="d-flex gap-3 col-6 justify-content-center ">
-                <a href="#" class="text-light text-decoration-none small">Privacy Policy</a>
-                <a href="#" class="text-light text-decoration-none small">Terms of Service</a>
-                <a href="#" class="text-light text-decoration-none small">Contact</a>
+            <div class="d-flex gap-3 col-4 justify-content-center debugging align-content-center">
+                <a href="#" class="text-light text-decoration-none small col align-content-center text-center">Privacy
+                    Policy</a>
+                <a href="#" class="text-light text-decoration-none small col-6 align-content-center text-center">Terms
+                    of Service</a>
+                <a href="#"
+                    class="text-light text-decoration-none small col align-content-center text-center">Contact</a>
             </div>
             <div class="d-flex gap-3 col justify-content-end">
                 <a href="#" class="text-light"><i class="bi bi-github fs-5"></i></a>
