--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <link rel="manifest" href="/site.webmanifest">
 </head>
 
-<body class="container">
+<body class="">
     <header class="mt-3">
         <!-- Header Content -->
-        <nav class="navbar navbar-expand-lg bg-dark px-4 row w-fit-content m-auto rounded-4">
-            <div class="col-12 d-flex gap-4 justify-content-center p-2">
+        <nav class="navbar navbar-expand-lg bg-dark px-3 row w-fit-content m-auto rounded-4">
+            <div class="col-12 d-flex gap-4 justify-content-center ">
                 <a href="/" class="icon-btn d-flex align-items-center justify-content-center text-decoration-none">
                     <i class="bi bi-bug-fill fs-2 d-flex align-items-center"></i>
                 </a>
@@ -44,15 +44,57 @@
 
     <main class="container p-0">
         <!-- Main Content -->
-        <div class="d-flex gap-2 store-container mt-3">
-            <div class="col-3 bg-dark rounded p-3">Filter</div>
-            <div class="col bg-dark rounded p-3">Store</div>
-            <div class="col-3 bg-dark rounded p-3">Chat</div>
+        <div class="d-flex d-md-none justify-content-end gap-2 mt-3">
+            <button class=" icon-btn" type="button" data-bs-toggle="modal" data-bs-target="#filterModal"
+                aria-label="Open filters">
+                <i class="bi bi-funnel"></i>
+            </button>
+            <button class=" icon-btn" type="button" data-bs-toggle="modal" data-bs-target="#cartModal"
+                aria-label="Open cart">
+                <i class="bi bi-cart"></i>
+            </button>
+        </div>
+        <div class="d-flex gap-2 store-container mt-3 flex-column flex-md-row">
+            <div class="col-md-3 bg-dark rounded p-3 d-none d-md-block">Filter</div>
+            <!-- Store Body **REPLACE WITH A POPULATE FUNCTION PLEASE** -->
+            <div class="col-12 col-md bg-dark rounded px-1 py-1 align-items-start store-main">
+                <div class="px-1 pt-2 store-inner row g-2">
+
+                    <div class="text-bg-dar p-1 store-card col-6 col-md-4 col-lg-2">
+                        <img src="/Images/icons/bubble-devourer.png" class="card-img rounded" alt="...">
+                        <p>Bubble Devourer</p>
+                    </div>
+                    <div class="text-bg-dar p-1 store-card col-6 col-md-4 col-lg-2">
+                        <img src="/Images/icons/core-awakening.png" class="card-img rounded" alt="...">
+                        <p>Core Awakening</p>
+                    </div>
+                    <div class="text-bg-dar p-1 store-card col-6 col-md-4 col-lg-2">
+                        <img src="/Images/icons/cosmo-puffle.png" class="card-img rounded" alt="...">
+                        <p>Cosmo Puffle</p>
+                    </div>
+                    <div class="text-bg-dar p-1 store-card col-6 col-md-4 col-lg-2">
+                        <img src="/Images/icons/nebula-bandit.png" class="card-img rounded" alt="...">
+                        <p>Nebula Bandit</p>
+                    </div>
+                    <div class="text-bg-dar p-1 store-card col-6 col-md-4 col-lg-2">
+                        <img src="/Images/icons/swag-duck.png" class="card-img rounded" alt="...">
+                        <p>Swag Duck</p>
+                    </div>
+                    <div class="text-bg-dar p-1 store-card col-6 col-md-4 col-lg-2">
+                        <img src="/Images/icons/swag-duck.png" class="card-img rounded" alt="...">
+                        <p>Swag Duck</p>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <div class="col-md-3 bg-dark rounded p-3 d-none d-md-block">Cart</div>
         </div>
     </main>
 
-    <footer class="footer mt-5 py-4 text-light border-top border-secondary m-auto rounded-4">
-        <div class="d-flex flex-column flex-md-row align-items-center gap-4 ">
+    <footer class="footer py-4 text-light border-top border-secondary">
+        <div class="d-flex flex-column flex-md-row align-items-center gap-4 m-auto px-4">
             <div class="d-flex align-items-center gap-2 col justify-content-start ">
                 <i class="bi bi-bug-fill fs-4 text-warning"></i>
                 <span class="fw-bold">Find The Err0r</span>
@@ -71,14 +113,45 @@
                 <a href="#" class="text-light"><i class="bi bi-envelope fs-5"></i></a>
             </div>
         </div>
-        <div class="text-center mt-3 container">
+        <!-- <div class="text-center mt-3 container">
             <small class="text-secondary">&copy; 2026 Find The Err0r. All rights reserved.</small>
-        </div>
+        </div> -->
     </footer>
 
 
 
 
+
+    <!-- Mobile Modals -->
+    <div class="modal fade" id="filterModal" tabindex="-1" aria-labelledby="filterModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content bg-dark text-light">
+                <div class="modal-header border-secondary">
+                    <h5 class="modal-title" id="filterModalLabel">Filters</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Filter content goes here.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content bg-dark text-light">
+                <div class="modal-header border-secondary">
+                    <h5 class="modal-title" id="cartModalLabel">Cart</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Cart content goes here.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
