--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Find The Err0r</title>
 
     <!-- Bootstrap -->
-    <!-- <link rel="stylesheet" href="Styles/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/morph/bootstrap.min.css">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
@@ -21,27 +20,13 @@
 </head>
 
 <body class="">
-    <header class="mt-3">
-        <!-- Header Content -->
-        <nav class="navbar navbar-expand-lg bg-dark px-3 row w-fit-content m-auto rounded-4">
-            <div class="col-12 d-flex gap-4 justify-content-center ">
-                <a href="/" class="icon-btn d-flex align-items-center justify-content-center text-decoration-none">
-                    <i class="bi bi-bug-fill fs-2 d-flex align-items-center"></i>
-                </a>
-                <a href="/" class="icon-btn d-flex align-items-center justify-content-center text-decoration-none">
-                    <i class="bi bi-bar-chart-fill fs-2 d-flex align-items-center"></i>
-                </a>
-                <a href="/" class="icon-btn d-flex align-items-center justify-content-center text-decoration-none">
-                    <i class="bi bi-person-circle fs-2 d-flex align-items-center"></i>
-                </a>
-                <a href="/"
-                    class="icon-btn d-flex align-items-center justify-content-center active-custom text-decoration-none">
-                    <i class="bi bi-coin fs-2 d-flex align-items-center"></i>
-                </a>
-            </div>
-        </nav>
+
+    <!-- Navbar -->
+    <header id="app" class="mt-3">
+        <navbar></navbar>
     </header>
 
+    <!-- Page Content -->
     <main class="container p-0">
         <!-- Main Content -->
 
@@ -409,7 +394,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-</body>
+
+    <!-- Vue app (ES module) -->
+    <script type="module" src="app.js"></script>
 </body>
 
 </html>
